--- a/less/detail.less
+++ b/less/detail.less
@@ -51,9 +51,11 @@
 			&.two {
 				.wr(540rem);.bg(@color);.psa;.r;.pdtr(32rem);
 				a {
-					.dsib;.c(#fff);.lhr(34rem);.pd-r(0,18rem);
+					.dsb;.c(#fff);.lhr(34rem);.w(50%);.flt;.psr;.tct;
 					&.line {
-						.bdr(#fff);
+						&:before{
+							content:'';.bg(#fff);.hr(36rem);.psa;.t;.r;.wr(2rem);
+						}
 					}
 				}
 			}
