--- a/less/base.less
+++ b/less/base.less
@@ -2,6 +2,7 @@
 @import 'home.less';
 @import 'my.less';
 @import 'detail.less';
+@import 'blog.less';
 
 html{.h;.fs(100px)}
 body,dl,p,table{margin:0}a{.tdn;.c(#000);.csr}.cb{.cb}.csr{.csr}.flt{.flt}.frt{.frt}input{.otl}.br{.br}.hide{.dsn}
@@ -166,10 +167,58 @@ footer {
 			.psa;.t;.l;.w;
 		}
 	}
-	dl {
+	dl.old {
 		.fsr(20rem);
 		dt {
 			.flt;.w(20%);.psr;.csr;
+			div {
+				.hr(@fh/2);
+				img {
+					.mgtr(8rem);
+				}
+				&.txt {
+					.lhr(42rem);.c(#999);
+				}
+			}
+			&.send {
+				&:before{
+					content:'';.psa;.lr(20rem);.sqar(90rem);.br;.bg(#fff);.tr(-9rem);
+				}
+				img {
+					.bolr(76rem);.psr;.zi;
+				}
+			}
+			span {
+				clear:left;
+			}
+			.icon {
+				.hr(44rem);.psr;.tr(4rem);
+			}
+			.cut {
+				.psa;.hr(64rem);.tr(13rem);
+				&.l {.l}
+				&.r {.r}
+			}
+			img.open {
+				.dsn;
+			}
+			img.close {
+				.dsi;
+			}
+			&.active {
+				img.open {
+					.dsi;
+				}
+				img.close {
+					.dsn;
+				}
+			}
+		}
+	}
+	dl.new {
+		.fsr(20rem);
+		dt {
+			.flt;.w(25%);.psr;.csr;
 			div {
 				.hr(@fh/2);
 				img {
