--- a/less/base.less
+++ b/less/base.less
@@ -27,7 +27,7 @@ input,textarea {
 content {
 	.head {
 		.bg(@color);.c(#fff);.lhr(76rem);.hr(76rem);//.tct;
-		a {
+		a.plt {
 			.psa;.lr(20rem);.c(#fff);.dsb;.wr(100rem);
 			img.area {
 				.hr(30rem);.mgrr(8rem);.psr;.tr(-4rem);
@@ -39,20 +39,94 @@ content {
 				}
 			}
 		}
+		a.prt {
+			.psa;.rr(20rem);.c(#fff);.dsb;
+		}
 		img.logo {
 			.h;.psr;.tr(-4rem);
 		}
 		b {
-			.psa;.lr(160rem);.tr(-2rem);
+			.psa;.lr(150rem);.tr(-2rem);
 			input {
-				.brr(16rem);.hr(36rem);.fsr(26rem);.tir(36rem);.wr(400rem);
+				.brr(16rem);.hr(36rem);.fsr(26rem);.tir(36rem);.wr(380rem);
 			}
 			img {
 				.psa;.hr(22rem);.tr(28rem);.lr(6rem);
 			}
 		}
-		.hideBox {
-			
+		.searchBox {
+			.bg(#f4f4f4);.bs;.bd;.psa;.tr(76rem);.w(88%);.l(5%);.pd(1%);.c(#333);.lhr(52rem);.zi(9);
+			.title {
+				.lhr(48rem);
+			}
+			.words {
+				.bg(#fff);.brr(8rem);
+				a {
+					.dsb;.w(33%);.flt;.tct;.bdr(#f4f4f4);.bdb(#f4f4f4);
+				}
+			}
+			/*dl {
+				.bg(#fff);.brr(8rem);.mgbr(9rem);
+				dt {
+					.bdb(#f4f4f4);.ti(0.5em);
+				}
+			}*/
+			.choiceCity {
+				.t(50rem);
+				a {
+					.dsib;
+				}
+				.city-title {
+					a {
+						.pd-r(0,6rem);.mg-r(0,2rem);
+						&:hover {
+							.bg(#F1F8FF);
+						}
+					}
+				}
+				.city-ok {
+					.mg-r(16rem,6rem);
+					a {
+						.pd-r(0,12rem);.mg-r(0,6rem);.bg(#E8E8E8);.bd(#ddd);.c(#000);
+					}
+				}
+				.city-menu {
+					.bg(#F0F0F0);.bdt(#ddd);
+					a {
+						.pd-r(0,20rem);
+						&.active {
+							.bg(#fff);
+						}
+					}
+				}
+				dl.city-data {
+					.dsn;.pd-r(16rem,0);.bg(#fff);
+					&.active {
+						.dsb;
+					}
+					dt {
+						.mgbr(16rem);.psr;
+						p {
+							.dsib;
+							&.number {
+								.wr(80rem);
+								span {
+									.psa;.t;
+								}
+							}
+							&.citys {
+								.wr(520rem);
+								a {
+									.pd-r(0,20rem);
+									&.active {
+										.bg(#46A4FF);.c(#fff);.brr(4rem);
+									}
+								}
+							}
+						}
+					}
+				}
+			}
 		}
 	}
 	.topImg {
