--- a/less/my.less
+++ b/less/my.less
@@ -14,7 +14,6 @@
 		}
 	}
 	dl {
-		.pdbr(140rem);
 		dt {
 			.w(33%);.flt;.tct;.pdbr(50rem);.bdb(#ddd);.psr;.bg(#fff);
 			img {
@@ -27,5 +26,8 @@
 				}
 			}
 		}
+	}
+	.contact {
+		.tct;.pdtr(60rem);.pdbr(120rem);
 	}
 }
