Signed-off-by: jiaoluojun <841232468@qq.com>

--- a/less/base.less
+++ b/less/base.less
@@ -62,15 +62,15 @@ content {
 			.words {
 				.bg(#fff);.brr(8rem);
 				a {
-					.dsb;.w(33%);.flt;.tct;.bdr(#f4f4f4);.bdb(#f4f4f4);
+					.dsb;.w(33.3%);.flt;.tct;.bdr(#f4f4f4);.bdb(#f4f4f4);.bsz;
 				}
 			}
-			/*dl {
+			dl.his {
 				.bg(#fff);.brr(8rem);.mgbr(9rem);
 				dt {
 					.bdb(#f4f4f4);.ti(0.5em);
 				}
-			}*/
+			}
 			.choiceCity {
 				.t(50rem);
 				a {
@@ -85,7 +85,7 @@ content {
 					}
 				}
 				.city-ok {
-					.mg-r(16rem,6rem);
+					.pd-r(16rem,6rem);.bg(#fff);
 					a {
 						.pd-r(0,12rem);.mg-r(0,6rem);.bg(#E8E8E8);.bd(#ddd);.c(#000);
 					}
