--- a/css/base.css
+++ b/css/base.css
@@ -715,12 +715,6 @@ content .head .searchBox {
   color: #333333;
   line-height: 0.26rem;
   z-index: 9;
-  /*dl {
-				.bg(#fff);.brr(8rem);.mgbr(9rem);
-				dt {
-					.bdb(#f4f4f4);.ti(0.5em);
-				}
-			}*/
 }
 content .head .searchBox .title {
   line-height: 0.24rem;
@@ -731,11 +725,21 @@ content .head .searchBox .words {
 }
 content .head .searchBox .words a {
   display: block;
-  width: 33%;
+  width: 33.3%;
   float: left;
   text-align: center;
   border-right: 1px solid #f4f4f4;
   border-bottom: 1px solid #f4f4f4;
+  box-sizing: border-box;
+}
+content .head .searchBox dl.his {
+  background: #ffffff;
+  border-radius: 0.04rem;
+  margin-bottom: 0.045rem;
+}
+content .head .searchBox dl.his dt {
+  border-bottom: 1px solid #f4f4f4;
+  text-indent: 0.5em;
 }
 content .head .searchBox .choiceCity {
   top: 50rem;
@@ -751,7 +755,8 @@ content .head .searchBox .choiceCity .city-title a:hover {
   background: #f1f8ff;
 }
 content .head .searchBox .choiceCity .city-ok {
-  margin: 0.08rem 0.03rem;
+  padding: 0.08rem 0.03rem;
+  background: #ffffff;
 }
 content .head .searchBox .choiceCity .city-ok a {
   padding: 0 0.06rem;
