Signed-off-by: [jiaolj] <[841232468@qq.com]>

--- a/less/base.less
+++ b/less/base.less
@@ -48,7 +48,7 @@ content {
 		b {
 			.psa;.lr(150rem);.tr(-2rem);
 			input {
-				.brr(16rem);.hr(36rem);.fsr(26rem);.tir(36rem);.wr(380rem);
+				.brr(16rem);.hr(36rem);.fsr(26rem);.tir(36rem);.wr(360rem);
 			}
 			img {
 				.psa;.hr(22rem);.tr(28rem);.lr(6rem);
@@ -65,12 +65,15 @@ content {
 					.dsb;.w(33%);.flt;.tct;.bdr(#f4f4f4);.bdb(#f4f4f4);
 				}
 			}
-			/*dl {
+			dl.his {
 				.bg(#fff);.brr(8rem);.mgbr(9rem);
 				dt {
 					.bdb(#f4f4f4);.ti(0.5em);
 				}
-			}*/
+			}
+			a.ok {
+				.pd-r(6rem,12rem);.mg-r(0,6rem);.bg(#E8E8E8);.bd(#ddd);.c(#000);
+			}
 			.choiceCity {
 				.t(50rem);
 				a {
