--- a/less/blog.less
+++ b/less/blog.less
@@ -43,35 +43,43 @@
 				}
 			}
 			.see {
-				.mgtr(20rem);.pdbr(16rem);.bdb(#eee);.lhr(30rem);
-				>img {
-					.sqar(44rem);.mgrr(16rem);.br;
+				.mgtr(20rem);.pdbr(16rem);.bdb(#eee);.lhr(30rem);.psr;
+				.viewers {
+					img {
+						.sqar(44rem);.mgrr(16rem);.br;
+					}
 				}
-				.frt {
-					.c(#999);
+				.prt {
+					.c(#999);.psa;.r;.t;
 					img {
 						.hr(30rem);.psr;.lr(-6rem);
+						&.openBlog {
+							.csr;
+						}
 					}
-					span {
-						.fsr(22rem);.psr;.tr(6rem);
-					}
-				}
-			}
-			.action {
-				.pdtr(20rem);.lhr(60rem);
-				>img,a>img {
-					.wr(28rem);.mgrr(10rem);
-				}
-				>span,a>span {
-					.c(#999);.fsr(20rem);.mgrr(20rem);.psr;.tr(4rem);
-				}
-				.frt {
-					.wr(166rem);
-					img{
-						.w;
+					.openBox{
+						.mgrr(8rem);.bg(#000);.pd-r(8rem,20rem,16rem,20rem);.brr(4rem);
+						a {
+							.c(#fff);.mglr(8rem);.mgrr(8rem);
+							span {
+								.fsr(22rem);.psr;.tr(2rem);
+							}
+						}
 					}
 				}
 			}
+		}
+	}
+	.leave {
+		.psf;.b;.w;.hr(90rem);.lhr(98rem);.bg(#fff);.zi(9);.bdt(#aaa);
+		.search {
+			.flt;.wr(530rem);.ofh;.mgrr(9rem);
+			input {
+				.w;.bdb(lighten(green,15%));.mglr(18rem);
+			}
+		}
+		a{
+			.dsb;.flt;.bd(#999);.hr(56rem);.lhr(56rem);.wr(80rem);.psr;.tr(17rem);.tct;.brr(8rem);
 		}
 	}
 }
