--- a/css/detail.css
+++ b/css/detail.css
@@ -130,6 +130,7 @@
   line-height: 0.4rem;
   position: relative;
   font-weight: 500;
+  color: #000000;
 }
 .detail .head img {
   height: 0.2rem;
