--- a/less/base.less
+++ b/less/base.less
@@ -46,12 +46,55 @@ content {
 			.h;.psr;.tr(-4rem);
 		}
 		b {
-			.psa;.lr(150rem);.tr(-2rem);
-			input {
-				.brr(16rem);.hr(36rem);.fsr(26rem);.tir(36rem);.wr(360rem);
-			}
+			.psa;.dsb;.lr(150rem);.tr(14rem);.brr(16rem);.lhr(46rem);.fsr(22rem);.wr(360rem);.tct;.bg(#fff);.c(#666);
 			img {
-				.psa;.hr(22rem);.tr(28rem);.lr(6rem);
+				.hr(22rem);.psr;.tr(-4rem);
+			}
+		}
+		.allBox {
+			@boxc:#F3F3F4;
+			.psf;.t;.w;;.c(#333);.lhr(52rem);.zi(9);.bg(@boxc);.h;
+			.search {
+				.bg(#fff);.pdtr(9rem);.pdbr(18rem);.bdb(#ddd);
+				a.back {
+					.dsb;.psa;.sqar(16rem);.bdtr(@color,3rem);.bdlr(@color,3rem);.tsf(-45deg);.mglr(18rem);.tr(22rem);
+				}
+				img {
+					.psa;.hr(20rem);.tr(29rem);.mglr(94rem);
+				}
+				input {
+					.bg(@boxc);.brr(18rem);.mglr(70rem);.hr(36rem);.fsr(22rem);.tir(50rem);.wr(520rem);
+				}
+			}
+			.box {
+				.pdbr(9rem);
+				.title {
+					.lhr(48rem);.fsr(22rem);.c(#999);.pdl(2%);
+				}
+				.words {
+					.bg(#fff);.brr(8rem);.w(96%);.mgl(2%);.bdt(@boxc);.bdl(@boxc);
+					a {
+						.dsb;.w(33.3%);.flt;.tct;.bdr(@boxc);.bdb(@boxc);.bsz;.bg(#fff);.fsr(24rem);
+					}
+				}
+				dl.his {
+					.bg(#fff);.brr(8rem);.mgbr(9rem);.w(96%);.mgl(2%);
+					dt {
+						.bdb(@boxc);.ti(0.5em);.bg(#fff);.fsr(24rem);.csr;.psr;
+						&:after {
+							content:'';.psa;.sqar(12rem);.bdb(#aaa);.bdr(#aaa);.tsf(-45deg);.rr(18rem);.tr(22rem);
+						}
+						img {
+							.hr(24rem);.psr;.tr(-3rem);
+						}
+					}
+				}
+				a.ok {
+					.dsb;.tct;.bg(#fff);.w(96%);.mgl(2%);.bg(@color);.brr(8rem);.c(#fff);.mgtr(20rem);
+					span {
+						//.pd-r(4rem,8rem);.bg(#E8E8E8);.bd(#ddd);.c(#000);.brr(4rem);
+					}
+				}
 			}
 		}
 		.searchBox {
