--- a/less/blog.less
+++ b/less/blog.less
@@ -43,7 +43,7 @@
 				}
 			}
 			.see {
-				.mgtr(20rem);.pdbr(16rem);.bdb(#eee);.lhr(30rem);.psr;
+				.mgtr(16rem);.pdbr(16rem);.bdb(#eee);.lhr(26rem);.psr;.hr(36rem);
 				.viewers {
 					img {
 						.sqar(44rem);.mgrr(16rem);.br;
