--- a/less/detail.less
+++ b/less/detail.less
@@ -68,7 +68,7 @@
 		.brr(8rem);
 	}
 	.head {
-		.tct;.bs;.bg(#fff);.fsr(33rem);.lhr(80rem);.psr;.fw(500);
+		.tct;.bs;.bg(#fff);.fsr(33rem);.lhr(80rem);.psr;.fw(500);.c(#000);
 		img {
 			.hr(40rem);.psa;.lr(32rem);.tr(20rem);
 		}
