--- a/css/base.css
+++ b/css/base.css
@@ -244,6 +244,7 @@
   line-height: 0.4rem;
   position: relative;
   font-weight: 500;
+  color: #000000;
 }
 .detail .head img {
   height: 0.2rem;
@@ -534,11 +535,12 @@
   margin-left: 0.05rem;
 }
 .blog dl.blog dt .see {
-  margin-top: 0.1rem;
+  margin-top: 0.08rem;
   padding-bottom: 0.08rem;
   border-bottom: 1px solid #eeeeee;
-  line-height: 0.15rem;
+  line-height: 0.13rem;
   position: relative;
+  height: 0.18rem;
 }
 .blog dl.blog dt .see .viewers img {
   width: 0.22rem;
@@ -715,21 +717,149 @@ content .head img.logo {
 }
 content .head b {
   position: absolute;
+  display: block;
   left: 0.75rem;
-  top: -0.01rem;
-}
-content .head b input {
+  top: 0.07rem;
   border-radius: 0.08rem;
-  height: 0.18rem;
-  font-size: 0.13rem;
-  text-indent: 0.18rem;
+  line-height: 0.23rem;
+  font-size: 0.11rem;
   width: 1.8rem;
+  text-align: center;
+  background: #ffffff;
+  color: #666666;
 }
 content .head b img {
-  position: absolute;
   height: 0.11rem;
-  top: 0.14rem;
-  left: 0.03rem;
+  position: relative;
+  top: -0.02rem;
+}
+content .head .allBox {
+  position: fixed;
+  top: 0%;
+  width: 100%;
+  color: #333333;
+  line-height: 0.26rem;
+  z-index: 9;
+  background: #f3f3f4;
+  height: 100%;
+}
+content .head .allBox .search {
+  background: #ffffff;
+  padding-top: 0.045rem;
+  padding-bottom: 0.09rem;
+  border-bottom: 1px solid #dddddd;
+}
+content .head .allBox .search a.back {
+  display: block;
+  position: absolute;
+  width: 0.08rem;
+  height: 0.08rem;
+  border-top: 0.015rem solid #1d77c7;
+  border-left: 0.015rem solid #1d77c7;
+  transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  /* IE 9 */
+  -moz-transform: rotate(-45deg);
+  /* Firefox */
+  -webkit-transform: rotate(-45deg);
+  /* Safari 和 Chrome */
+  -o-transform: rotate(-45deg);
+  /* Opera */
+  margin-left: 0.09rem;
+  top: 0.11rem;
+}
+content .head .allBox .search img {
+  position: absolute;
+  height: 0.1rem;
+  top: 0.145rem;
+  margin-left: 0.47rem;
+}
+content .head .allBox .search input {
+  background: #f3f3f4;
+  border-radius: 0.09rem;
+  margin-left: 0.35rem;
+  height: 0.18rem;
+  font-size: 0.11rem;
+  text-indent: 0.25rem;
+  width: 2.6rem;
+}
+content .head .allBox .box {
+  padding-bottom: 0.045rem;
+}
+content .head .allBox .box .title {
+  line-height: 0.24rem;
+  font-size: 0.11rem;
+  color: #999999;
+  padding-left: 2%;
+}
+content .head .allBox .box .words {
+  background: #ffffff;
+  border-radius: 0.04rem;
+  width: 96%;
+  margin-left: 2%;
+  border-top: 1px solid #f3f3f4;
+  border-left: 1px solid #f3f3f4;
+}
+content .head .allBox .box .words a {
+  display: block;
+  width: 33.3%;
+  float: left;
+  text-align: center;
+  border-right: 1px solid #f3f3f4;
+  border-bottom: 1px solid #f3f3f4;
+  box-sizing: border-box;
+  background: #ffffff;
+  font-size: 0.12rem;
+}
+content .head .allBox .box dl.his {
+  background: #ffffff;
+  border-radius: 0.04rem;
+  margin-bottom: 0.045rem;
+  width: 96%;
+  margin-left: 2%;
+}
+content .head .allBox .box dl.his dt {
+  border-bottom: 1px solid #f3f3f4;
+  text-indent: 0.5em;
+  background: #ffffff;
+  font-size: 0.12rem;
+  cursor: pointer;
+  position: relative;
+}
+content .head .allBox .box dl.his dt:after {
+  content: '';
+  position: absolute;
+  width: 0.06rem;
+  height: 0.06rem;
+  border-bottom: 1px solid #aaaaaa;
+  border-right: 1px solid #aaaaaa;
+  transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  /* IE 9 */
+  -moz-transform: rotate(-45deg);
+  /* Firefox */
+  -webkit-transform: rotate(-45deg);
+  /* Safari 和 Chrome */
+  -o-transform: rotate(-45deg);
+  /* Opera */
+  right: 0.09rem;
+  top: 0.11rem;
+}
+content .head .allBox .box dl.his dt img {
+  height: 0.12rem;
+  position: relative;
+  top: -0.015rem;
+}
+content .head .allBox .box a.ok {
+  display: block;
+  text-align: center;
+  background: #ffffff;
+  width: 96%;
+  margin-left: 2%;
+  background: #1d77c7;
+  border-radius: 0.04rem;
+  color: #ffffff;
+  margin-top: 0.1rem;
 }
 content .head .searchBox {
   background: #f4f4f4;
