--- a/less/blog.less
+++ b/less/blog.less
@@ -43,7 +43,7 @@
 				}
 			}
 			.see {
-				.mgtr(16rem);.pdbr(16rem);.bdb(#eee);.lhr(26rem);.psr;.hr(36rem);
+				.mgtr(16rem);.pdbr(16rem);.bdb(#eee);.lhr(32rem);.psr;.hr(42rem);
 				.viewers {
 					img {
 						.sqar(44rem);.mgrr(16rem);.br;
@@ -58,9 +58,9 @@
 						}
 					}
 					.openBox{
-						.mgrr(8rem);.bg(#000);.pd-r(8rem,20rem,16rem,20rem);.brr(4rem);
+						.mgrr(8rem);.bg(rgba(0,0,0,0.8));.pd-r(8rem,24rem,16rem,24rem);.brr(4rem);
 						a {
-							.c(#fff);.mglr(8rem);.mgrr(8rem);
+							.c(#fff);.mglr(24rem);.mgrr(24rem);
 							span {
 								.fsr(22rem);.psr;.tr(2rem);
 							}
