--- a/less/blog.less
+++ b/less/blog.less
@@ -24,6 +24,9 @@
 					.fsr(24rem);.c(#ccc);.lhr(38rem);
 				}
 			}
+			span.viewCard {
+				.psa;.rr(9rem);
+			}
 			.text {
 				.brr(20rem);.bg(#F4F4F4);.pd-r(20rem);.mgtr(20rem);
 				.title {
