--- a/less/blog.less
+++ b/less/blog.less
@@ -6,7 +6,7 @@
 	dl.blog {
 		.fsr(28rem);.mgbr(96rem);
 		dt {
-			.pd-r(20rem);.bg(#fff);.mgbr(42rem);
+			.pd-r(20rem);.bg(#fff);.mgbr(42rem);.psr;
 			.photo {
 				.wr(86rem);.mgrr(20rem);.psr;
 				img {
@@ -25,7 +25,7 @@
 				}
 			}
 			span.viewCard {
-				.psa;.rr(9rem);
+				.psa;.rr(18rem);.tr(68rem);.bd(@red);.c(@red);.brr(4rem);.pd-r(6rem,9rem);.fsr(22rem);
 			}
 			.text {
 				.brr(20rem);.bg(#F4F4F4);.pd-r(20rem);.mgtr(20rem);
